PRAGMA foreign_keys = ON;

BEGIN TRANSACTION;

-- Schema generated from erd_gia_su_fixed_2.html.
-- Only columns and business rules that are explicit in the ERD/notes are modeled here.

CREATE TABLE HOC_VIEN (
  ma_hoc_vien TEXT NOT NULL PRIMARY KEY
);

CREATE TABLE GIA_SU (
  ma_gia_su TEXT NOT NULL PRIMARY KEY
);

CREATE TABLE MON_HOC (
  ma_mon TEXT NOT NULL PRIMARY KEY
);

CREATE TABLE YEU_CAU_LOP (
  ma_yeu_cau TEXT NOT NULL PRIMARY KEY,
  ma_hoc_vien TEXT NOT NULL,
  CONSTRAINT FK_YEU_CAU_LOP_HOC_VIEN
    FOREIGN KEY (ma_hoc_vien)
    REFERENCES HOC_VIEN (ma_hoc_vien)
    ON UPDATE CASCADE
    ON DELETE RESTRICT,
  CONSTRAINT UQ_YEU_CAU_LOP_OWNER
    UNIQUE (ma_yeu_cau, ma_hoc_vien)
);

CREATE TABLE GIA_SU_MON_HOC (
  ma_gia_su TEXT NOT NULL,
  ma_mon TEXT NOT NULL,
  PRIMARY KEY (ma_gia_su, ma_mon),
  CONSTRAINT FK_GIA_SU_MON_HOC_GIA_SU
    FOREIGN KEY (ma_gia_su)
    REFERENCES GIA_SU (ma_gia_su)
    ON UPDATE CASCADE
    ON DELETE CASCADE,
  CONSTRAINT FK_GIA_SU_MON_HOC_MON_HOC
    FOREIGN KEY (ma_mon)
    REFERENCES MON_HOC (ma_mon)
    ON UPDATE CASCADE
    ON DELETE CASCADE
);

CREATE TABLE YEU_CAU_MON (
  ma_yeu_cau TEXT NOT NULL,
  ma_mon TEXT NOT NULL,
  PRIMARY KEY (ma_yeu_cau, ma_mon),
  CONSTRAINT FK_YEU_CAU_MON_YEU_CAU_LOP
    FOREIGN KEY (ma_yeu_cau)
    REFERENCES YEU_CAU_LOP (ma_yeu_cau)
    ON UPDATE CASCADE
    ON DELETE CASCADE,
  CONSTRAINT FK_YEU_CAU_MON_MON_HOC
    FOREIGN KEY (ma_mon)
    REFERENCES MON_HOC (ma_mon)
    ON UPDATE CASCADE
    ON DELETE CASCADE
);

CREATE TABLE LOP_HOC (
  ma_lop TEXT NOT NULL PRIMARY KEY,
  ma_gia_su TEXT NOT NULL,
  ma_hoc_vien TEXT NOT NULL,
  ma_yeu_cau TEXT NOT NULL,
  CONSTRAINT UQ_LOP_HOC_MA_YEU_CAU
    UNIQUE (ma_yeu_cau),
  CONSTRAINT UQ_LOP_HOC_OWNER
    UNIQUE (ma_lop, ma_hoc_vien),
  CONSTRAINT FK_LOP_HOC_GIA_SU
    FOREIGN KEY (ma_gia_su)
    REFERENCES GIA_SU (ma_gia_su)
    ON UPDATE CASCADE
    ON DELETE RESTRICT,
  CONSTRAINT FK_LOP_HOC_HOC_VIEN
    FOREIGN KEY (ma_hoc_vien)
    REFERENCES HOC_VIEN (ma_hoc_vien)
    ON UPDATE CASCADE
    ON DELETE RESTRICT,
  CONSTRAINT FK_LOP_HOC_YEU_CAU_OWNER
    FOREIGN KEY (ma_yeu_cau, ma_hoc_vien)
    REFERENCES YEU_CAU_LOP (ma_yeu_cau, ma_hoc_vien)
    ON UPDATE CASCADE
    ON DELETE RESTRICT
);

CREATE TABLE LOP_HOC_MON (
  ma_lop TEXT NOT NULL,
  ma_mon TEXT NOT NULL,
  PRIMARY KEY (ma_lop, ma_mon),
  CONSTRAINT FK_LOP_HOC_MON_LOP_HOC
    FOREIGN KEY (ma_lop)
    REFERENCES LOP_HOC (ma_lop)
    ON UPDATE CASCADE
    ON DELETE CASCADE,
  CONSTRAINT FK_LOP_HOC_MON_MON_HOC
    FOREIGN KEY (ma_mon)
    REFERENCES MON_HOC (ma_mon)
    ON UPDATE CASCADE
    ON DELETE CASCADE
);

CREATE TABLE DANG_KY (
  ma_dang_ky TEXT NOT NULL PRIMARY KEY,
  ma_hoc_vien TEXT NOT NULL,
  ma_lop TEXT NOT NULL,
  CONSTRAINT UQ_DANG_KY_MA_LOP
    UNIQUE (ma_lop),
  CONSTRAINT FK_DANG_KY_HOC_VIEN
    FOREIGN KEY (ma_hoc_vien)
    REFERENCES HOC_VIEN (ma_hoc_vien)
    ON UPDATE CASCADE
    ON DELETE RESTRICT,
  CONSTRAINT FK_DANG_KY_LOP_HOC_OWNER
    FOREIGN KEY (ma_lop, ma_hoc_vien)
    REFERENCES LOP_HOC (ma_lop, ma_hoc_vien)
    ON UPDATE CASCADE
    ON DELETE RESTRICT
);

CREATE TABLE LICH_HOC (
  ma_lich TEXT NOT NULL PRIMARY KEY,
  ma_lop TEXT NOT NULL,
  CONSTRAINT FK_LICH_HOC_LOP_HOC
    FOREIGN KEY (ma_lop)
    REFERENCES LOP_HOC (ma_lop)
    ON UPDATE CASCADE
    ON DELETE CASCADE
);

CREATE TABLE BUOI_HOC (
  ma_buoi_hoc TEXT NOT NULL PRIMARY KEY,
  ma_lop TEXT NOT NULL,
  ma_lich TEXT NOT NULL,
  CONSTRAINT FK_BUOI_HOC_LOP_HOC
    FOREIGN KEY (ma_lop)
    REFERENCES LOP_HOC (ma_lop)
    ON UPDATE CASCADE
    ON DELETE CASCADE,
  CONSTRAINT FK_BUOI_HOC_LICH_HOC_OWNER
    FOREIGN KEY (ma_lich, ma_lop)
    REFERENCES LICH_HOC (ma_lich, ma_lop)
    ON UPDATE CASCADE
    ON DELETE RESTRICT
);

CREATE TABLE DIEM_DANH (
  ma_buoi_hoc TEXT NOT NULL,
  ma_dang_ky TEXT NOT NULL,
  PRIMARY KEY (ma_buoi_hoc, ma_dang_ky),
  CONSTRAINT FK_DIEM_DANH_BUOI_HOC
    FOREIGN KEY (ma_buoi_hoc)
    REFERENCES BUOI_HOC (ma_buoi_hoc)
    ON UPDATE CASCADE
    ON DELETE CASCADE,
  CONSTRAINT FK_DIEM_DANH_DANG_KY
    FOREIGN KEY (ma_dang_ky)
    REFERENCES DANG_KY (ma_dang_ky)
    ON UPDATE CASCADE
    ON DELETE CASCADE
);

CREATE TABLE TAI_KHOAN_HV (
  ma_tk_hv TEXT NOT NULL PRIMARY KEY,
  ma_hoc_vien TEXT NOT NULL,
  CONSTRAINT FK_TAI_KHOAN_HV_HOC_VIEN
    FOREIGN KEY (ma_hoc_vien)
    REFERENCES HOC_VIEN (ma_hoc_vien)
    ON UPDATE CASCADE
    ON DELETE RESTRICT
);

CREATE TABLE TAI_KHOAN_GS (
  ma_tk_gs TEXT NOT NULL PRIMARY KEY,
  ma_gia_su TEXT NOT NULL,
  CONSTRAINT FK_TAI_KHOAN_GS_GIA_SU
    FOREIGN KEY (ma_gia_su)
    REFERENCES GIA_SU (ma_gia_su)
    ON UPDATE CASCADE
    ON DELETE RESTRICT
);

CREATE TABLE GIAO_DICH (
  ma_giao_dich TEXT NOT NULL PRIMARY KEY,
  ma_dang_ky TEXT NOT NULL,
  ma_tk_hv TEXT NOT NULL,
  ma_tk_gs TEXT NOT NULL,
  CONSTRAINT FK_GIAO_DICH_DANG_KY
    FOREIGN KEY (ma_dang_ky)
    REFERENCES DANG_KY (ma_dang_ky)
    ON UPDATE CASCADE
    ON DELETE RESTRICT,
  CONSTRAINT FK_GIAO_DICH_TAI_KHOAN_HV
    FOREIGN KEY (ma_tk_hv)
    REFERENCES TAI_KHOAN_HV (ma_tk_hv)
    ON UPDATE CASCADE
    ON DELETE RESTRICT,
  CONSTRAINT FK_GIAO_DICH_TAI_KHOAN_GS
    FOREIGN KEY (ma_tk_gs)
    REFERENCES TAI_KHOAN_GS (ma_tk_gs)
    ON UPDATE CASCADE
    ON DELETE RESTRICT
);

CREATE TABLE DANH_GIA (
  ma_danh_gia TEXT NOT NULL PRIMARY KEY,
  ma_dang_ky TEXT NOT NULL,
  CONSTRAINT UQ_DANH_GIA_MA_DANG_KY
    UNIQUE (ma_dang_ky),
  CONSTRAINT FK_DANH_GIA_DANG_KY
    FOREIGN KEY (ma_dang_ky)
    REFERENCES DANG_KY (ma_dang_ky)
    ON UPDATE CASCADE
    ON DELETE RESTRICT
);

CREATE TABLE THONG_BAO (
  ma_thong_bao TEXT NOT NULL PRIMARY KEY,
  ma_hoc_vien TEXT,
  ma_gia_su TEXT,
  ma_yeu_cau TEXT,
  ma_lop TEXT,
  ma_giao_dich TEXT,
  ma_buoi_hoc TEXT,
  CONSTRAINT FK_THONG_BAO_HOC_VIEN
    FOREIGN KEY (ma_hoc_vien)
    REFERENCES HOC_VIEN (ma_hoc_vien)
    ON UPDATE CASCADE
    ON DELETE SET NULL,
  CONSTRAINT FK_THONG_BAO_GIA_SU
    FOREIGN KEY (ma_gia_su)
    REFERENCES GIA_SU (ma_gia_su)
    ON UPDATE CASCADE
    ON DELETE SET NULL,
  CONSTRAINT FK_THONG_BAO_YEU_CAU_LOP
    FOREIGN KEY (ma_yeu_cau)
    REFERENCES YEU_CAU_LOP (ma_yeu_cau)
    ON UPDATE CASCADE
    ON DELETE SET NULL,
  CONSTRAINT FK_THONG_BAO_LOP_HOC
    FOREIGN KEY (ma_lop)
    REFERENCES LOP_HOC (ma_lop)
    ON UPDATE CASCADE
    ON DELETE SET NULL,
  CONSTRAINT FK_THONG_BAO_GIAO_DICH
    FOREIGN KEY (ma_giao_dich)
    REFERENCES GIAO_DICH (ma_giao_dich)
    ON UPDATE CASCADE
    ON DELETE SET NULL,
  CONSTRAINT FK_THONG_BAO_BUOI_HOC
    FOREIGN KEY (ma_buoi_hoc)
    REFERENCES BUOI_HOC (ma_buoi_hoc)
    ON UPDATE CASCADE
    ON DELETE SET NULL
);

CREATE INDEX IDX_YEU_CAU_LOP_MA_HOC_VIEN
  ON YEU_CAU_LOP (ma_hoc_vien);

CREATE INDEX IDX_GIA_SU_MON_HOC_MA_MON
  ON GIA_SU_MON_HOC (ma_mon);

CREATE INDEX IDX_YEU_CAU_MON_MA_MON
  ON YEU_CAU_MON (ma_mon);

CREATE INDEX IDX_LOP_HOC_MA_GIA_SU
  ON LOP_HOC (ma_gia_su);

CREATE INDEX IDX_LOP_HOC_MA_HOC_VIEN
  ON LOP_HOC (ma_hoc_vien);

CREATE INDEX IDX_LOP_HOC_MON_MA_MON
  ON LOP_HOC_MON (ma_mon);

CREATE INDEX IDX_DANG_KY_MA_HOC_VIEN
  ON DANG_KY (ma_hoc_vien);

CREATE INDEX IDX_LICH_HOC_MA_LOP
  ON LICH_HOC (ma_lop);

CREATE INDEX IDX_BUOI_HOC_MA_LOP
  ON BUOI_HOC (ma_lop);

CREATE INDEX IDX_BUOI_HOC_MA_LICH
  ON BUOI_HOC (ma_lich);

CREATE INDEX IDX_DIEM_DANH_MA_DANG_KY
  ON DIEM_DANH (ma_dang_ky);

CREATE INDEX IDX_TAI_KHOAN_HV_MA_HOC_VIEN
  ON TAI_KHOAN_HV (ma_hoc_vien);

CREATE INDEX IDX_TAI_KHOAN_GS_MA_GIA_SU
  ON TAI_KHOAN_GS (ma_gia_su);

CREATE INDEX IDX_GIAO_DICH_MA_DANG_KY
  ON GIAO_DICH (ma_dang_ky);

CREATE INDEX IDX_GIAO_DICH_MA_TK_HV
  ON GIAO_DICH (ma_tk_hv);

CREATE INDEX IDX_GIAO_DICH_MA_TK_GS
  ON GIAO_DICH (ma_tk_gs);

CREATE INDEX IDX_THONG_BAO_MA_HOC_VIEN
  ON THONG_BAO (ma_hoc_vien);

CREATE INDEX IDX_THONG_BAO_MA_GIA_SU
  ON THONG_BAO (ma_gia_su);

CREATE INDEX IDX_THONG_BAO_MA_YEU_CAU
  ON THONG_BAO (ma_yeu_cau);

CREATE INDEX IDX_THONG_BAO_MA_LOP
  ON THONG_BAO (ma_lop);

CREATE INDEX IDX_THONG_BAO_MA_GIAO_DICH
  ON THONG_BAO (ma_giao_dich);

CREATE INDEX IDX_THONG_BAO_MA_BUOI_HOC
  ON THONG_BAO (ma_buoi_hoc);

COMMIT;
