erDiagram
  hoc_vien {
    VARCHAR_20 ma_hoc_vien "PK"
    NVARCHAR_100 ho_ten
    DATE ngay_sinh
    NVARCHAR_10 gioi_tinh
    VARCHAR_15 so_dien_thoai
    VARCHAR_150 email
    NVARCHAR_MAX dia_chi
    NVARCHAR_MAX anh_dai_dien
    NVARCHAR_20 khoi_hien_tai
    UNIQUEIDENTIFIER auth_id
    DATETIME ngay_tao
    DATETIME ngay_cap_nhat
  }
  gia_su {
    VARCHAR_20 ma_gia_su "PK"
    NVARCHAR_100 ho_ten
    DATE ngay_sinh
    NVARCHAR_10 gioi_tinh
    VARCHAR_15 so_dien_thoai
    VARCHAR_150 email
    NVARCHAR_MAX dia_chi
    NVARCHAR_MAX anh_dai_dien
    NVARCHAR_200 trinh_do
    NVARCHAR_MAX gioi_thieu
    BIT trong_lich
    UNIQUEIDENTIFIER auth_id
    DATETIME ngay_tao
    DATETIME ngay_cap_nhat
  }
  mon_hoc {
    VARCHAR_20 ma_mon "PK"
    NVARCHAR_100 ten_mon
    NVARCHAR_50 cap_hoc
    NVARCHAR_MAX mo_ta
  }
  gia_su_mon_hoc {
    VARCHAR_20 ma_gia_su "PK,FK"
    VARCHAR_20 ma_mon "PK,FK"
    INT nam_kinh_nghiem
    NVARCHAR_20 muc_do_thanh_thao
    NVARCHAR_MAX chung_chi
  }
  yeu_cau_lop {
    VARCHAR_20 ma_yeu_cau "PK"
    VARCHAR_20 ma_hoc_vien "FK"
    NVARCHAR_200 tieu_de
    NVARCHAR_MAX mo_ta
    DECIMAL_12_0 tien_hoc_phi
    NVARCHAR_MAX dia_chi
    VARCHAR_20 hinh_thuc_hoc
    SMALLINT so_buoi_tuan
    NVARCHAR_MAX thoi_gian_mong_muon
    DATETIME ngay_yeu_cau
    VARCHAR_20 trang_thai
    VARCHAR_20 ma_gia_su_duoc_chon "FK"
    DATETIME ngay_chon_gia_su
    DATETIME ngay_cap_nhat
  }
  yeu_cau_mon {
    VARCHAR_20 ma_yeu_cau "PK,FK"
    VARCHAR_20 ma_mon "PK,FK"
    NVARCHAR_20 vai_tro_mon
    NVARCHAR_MAX ghi_chu
  }
  ung_tuyen {
    VARCHAR_30 ma_ung_tuyen "PK"
    VARCHAR_20 ma_yeu_cau "FK"
    VARCHAR_20 ma_gia_su "FK"
    DECIMAL_12_0 thu_nhap_mong_muon
    NVARCHAR_MAX loi_nhan
    VARCHAR_20 trang_thai
    DATETIME ngay_ung_tuyen
    DATETIME ngay_xu_ly
  }
  lop_hoc {
    VARCHAR_20 ma_lop "PK"
    VARCHAR_20 ma_gia_su "FK"
    VARCHAR_20 ma_hoc_vien "FK"
    VARCHAR_20 ma_yeu_cau "FK,UQ"
    VARCHAR_30 ma_ung_tuyen "FK"
    DECIMAL_12_0 hoc_phi
    NVARCHAR_MAX dia_chi
    VARCHAR_20 hinh_thuc_day
    DATE ngay_bat_dau
    DATE ngay_ket_thuc
    VARCHAR_20 trang_thai
    SMALLINT so_hv_toi_da
    INT tong_so_buoi
    DATETIME ngay_tao
  }
  lop_hoc_mon {
    VARCHAR_20 ma_lop "PK,FK"
    VARCHAR_20 ma_mon "PK,FK"
    NVARCHAR_20 vai_tro_mon
    INT so_buoi_du_kien
    NVARCHAR_MAX ghi_chu
  }
  lich_hoc {
    VARCHAR_20 ma_lich "PK"
    VARCHAR_20 ma_lop "FK"
    SMALLINT thu_trong_tuan
    TIME gio_bat_dau
    TIME gio_ket_thuc
  }
  buoi_hoc {
    VARCHAR_20 ma_buoi_hoc "PK"
    VARCHAR_20 ma_lop "FK"
    VARCHAR_20 ma_lich "FK"
    DATE ngay_hoc
    TIME gio_bat_dau
    TIME gio_ket_thuc
    VARCHAR_20 trang_thai
    NVARCHAR_MAX ghi_chu
  }
  dang_ky {
    VARCHAR_20 ma_dang_ky "PK"
    VARCHAR_20 ma_hoc_vien "FK"
    VARCHAR_20 ma_lop "FK,UQ"
    DATETIME ngay_dang_ky
    VARCHAR_20 trang_thai
    NVARCHAR_MAX ghi_chu
  }
  tai_khoan_hv {
    VARCHAR_20 ma_tk_hv "PK"
    VARCHAR_20 ma_hoc_vien "FK"
    VARCHAR_30 so_tai_khoan
    NVARCHAR_100 nha_cung_cap
    VARCHAR_30 loai_phuong_thuc
    NVARCHAR_100 ten_chu_tk
    BIT la_mac_dinh
  }
  tai_khoan_gs {
    VARCHAR_20 ma_tk_gs "PK"
    VARCHAR_20 ma_gia_su "FK"
    VARCHAR_30 so_tai_khoan
    NVARCHAR_100 nha_cung_cap
    VARCHAR_30 loai_phuong_thuc
    NVARCHAR_100 ten_chu_tk
    BIT la_mac_dinh
  }
  giao_dich {
    VARCHAR_30 ma_giao_dich "PK"
    VARCHAR_20 ma_dang_ky "FK"
    VARCHAR_20 ma_tk_hv "FK"
    VARCHAR_20 ma_tk_gs "FK"
    DECIMAL_15_0 tong_tien_thu
    DECIMAL_5_2 ty_le_hoa_hong
    DECIMAL_15_0 phi_hoa_hong
    DECIMAL_15_0 so_tien_gia_su_nhan
    DATETIME ngay_thanh_toan
    DATETIME ngay_doi_soat
    VARCHAR_20 trang_thai
    VARCHAR_30 loai_giao_dich
    VARCHAR_100 ma_tham_chieu "UQ"
  }
  danh_gia {
    VARCHAR_20 ma_danh_gia "PK"
    VARCHAR_20 ma_dang_ky "FK,UQ"
    SMALLINT diem_sao
    NVARCHAR_MAX nhan_xet
    DATETIME ngay_danh_gia
  }
  diem_danh {
    VARCHAR_20 ma_buoi_hoc "PK,FK"
    VARCHAR_20 ma_dang_ky "PK,FK"
    VARCHAR_20 trang_thai
    INT so_phut_hoc
    NVARCHAR_MAX ghi_chu
  }
  thong_bao {
    VARCHAR_40 ma_thong_bao "PK"
    VARCHAR_20 ma_hoc_vien "FK"
    VARCHAR_20 ma_gia_su "FK"
    VARCHAR_30 loai_thong_bao
    NVARCHAR_200 tieu_de
    NVARCHAR_MAX noi_dung
    BIT da_doc
    DATETIME ngay_tao
    VARCHAR_20 ma_yeu_cau
    VARCHAR_20 ma_lop
    VARCHAR_30 ma_giao_dich
    VARCHAR_20 ma_buoi_hoc
  }
  audit_log {
    BIGINT id "PK"
    VARCHAR_50 table_name
    VARCHAR_30 record_id
    VARCHAR_10 action
    NVARCHAR_MAX old_data
    NVARCHAR_MAX new_data
    VARCHAR_100 changed_by
    DATETIME changed_at
  }
  gia_su ||--o{ gia_su_mon_hoc : "ma_gia_su"
  mon_hoc ||--o{ gia_su_mon_hoc : "ma_mon"
  hoc_vien ||--o{ yeu_cau_lop : "ma_hoc_vien"
  gia_su o|--o{ yeu_cau_lop : "ma_gia_su_duoc_chon"
  yeu_cau_lop ||--o{ yeu_cau_mon : "ma_yeu_cau"
  mon_hoc ||--o{ yeu_cau_mon : "ma_mon"
  yeu_cau_lop ||--o{ ung_tuyen : "ma_yeu_cau"
  gia_su ||--o{ ung_tuyen : "ma_gia_su"
  gia_su ||--o{ lop_hoc : "ma_gia_su"
  hoc_vien ||--o{ lop_hoc : "ma_hoc_vien"
  yeu_cau_lop o|--o| lop_hoc : "ma_yeu_cau"
  ung_tuyen o|--o{ lop_hoc : "ma_ung_tuyen"
  lop_hoc ||--o{ lop_hoc_mon : "ma_lop"
  mon_hoc ||--o{ lop_hoc_mon : "ma_mon"
  lop_hoc ||--o{ lich_hoc : "ma_lop"
  lop_hoc ||--o{ buoi_hoc : "ma_lop"
  hoc_vien ||--o{ dang_ky : "ma_hoc_vien"
  lop_hoc ||--o| dang_ky : "ma_lop"
  hoc_vien ||--o{ tai_khoan_hv : "ma_hoc_vien"
  gia_su ||--o{ tai_khoan_gs : "ma_gia_su"
  dang_ky ||--o{ giao_dich : "ma_dang_ky"
  tai_khoan_hv ||--o{ giao_dich : "ma_tk_hv"
  tai_khoan_gs ||--o{ giao_dich : "ma_tk_gs"
  dang_ky ||--o| danh_gia : "ma_dang_ky"
  buoi_hoc ||--o{ diem_danh : "ma_buoi_hoc"
  dang_ky ||--o{ diem_danh : "ma_dang_ky"
  hoc_vien o|--o{ thong_bao : "ma_hoc_vien"
  gia_su o|--o{ thong_bao : "ma_gia_su"
  lich_hoc o|--o{ buoi_hoc : "ma_lop_ma_lich"
